# Skid_Steer_Robot_Hardware_Interface

./: README.md
controller/: CMakeLists.txt  package.xml
controller/config/: controller_manager_config.yaml
description/: CMakeLists.txt  package.xml
description/urdf/: common_properties.xacro  gazebo_base.xacro  mobile_base.xacro  robot_core.xacro  ros2_control.xacro
firmware/: CMakeLists.txt  hardware_interface.xml  package.xml
firmware/include/firmware/: raspberryPi_hardware_interface.hpp  wheel.hpp
firmware/launch/: controller.launch.py  test_robot.launch.py
firmware/src/: raspberryPi_hardware_interface.cpp  wheel.cpp
